--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'Oswald-Regular';
-  src: url('./../fonts/Oswald-Regular.eot');
-  src: url('./../fonts/Oswald-Regular.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Oswald-Regular.woff2') format('woff2'),
-    url('./../fonts/Oswald-Regular.woff') format('woff'),
-    url('./../fonts/Oswald-Regular.ttf') format('truetype'),
-    url('./../fonts/Oswald-Regular.svg#Oswald-Regular') format('svg');
+  src: url('../fonts/Oswald-Regular.eot');
+  src: url('../fonts/Oswald-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Oswald-Regular.woff2') format('woff2'),
+    url('../fonts/Oswald-Regular.woff') format('woff'),
+    url('../fonts/Oswald-Regular.ttf') format('truetype'),
+    url('../fonts/Oswald-Regular.svg#Oswald-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -13,12 +13,12 @@
 
 @font-face {
   font-family: 'Oswald-SemiBold';
-  src: url('./../fonts/Oswald-SemiBold.eot');
-  src: url('./../fonts/Oswald-SemiBold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Oswald-SemiBold.woff2') format('woff2'),
-    url('./../fonts/Oswald-SemiBold.woff') format('woff'),
-    url('./../fonts/Oswald-SemiBold.ttf') format('truetype'),
-    url('./../fonts/Oswald-SemiBold.svg#Oswald-SemiBold') format('svg');
+  src: url('../fonts/Oswald-SemiBold.eot');
+  src: url('../fonts/Oswald-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Oswald-SemiBold.woff2') format('woff2'),
+    url('../fonts/Oswald-SemiBold.woff') format('woff'),
+    url('../fonts/Oswald-SemiBold.ttf') format('truetype'),
+    url('../fonts/Oswald-SemiBold.svg#Oswald-SemiBold') format('svg');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -26,12 +26,12 @@
 
 @font-face {
   font-family: 'Oswald-ExtraLight';
-  src: url('./../fonts/Oswald-ExtraLight.eot');
-  src: url('./../fonts/Oswald-ExtraLight.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Oswald-ExtraLight.woff2') format('woff2'),
-    url('./../fonts/Oswald-ExtraLight.woff') format('woff'),
-    url('./../fonts/Oswald-ExtraLight.ttf') format('truetype'),
-    url('./../fonts/Oswald-ExtraLight.svg#Oswald-ExtraLight') format('svg');
+  src: url('../fonts/Oswald-ExtraLight.eot');
+  src: url('../fonts/Oswald-ExtraLight.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Oswald-ExtraLight.woff2') format('woff2'),
+    url('../fonts/Oswald-ExtraLight.woff') format('woff'),
+    url('../fonts/Oswald-ExtraLight.ttf') format('truetype'),
+    url('../fonts/Oswald-ExtraLight.svg#Oswald-ExtraLight') format('svg');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -39,12 +39,12 @@
 
 @font-face {
   font-family: 'Oswald-Light';
-  src: url('./../fonts/Oswald-Light.eot');
-  src: url('./../fonts/Oswald-Light.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Oswald-Light.woff2') format('woff2'),
-    url('./../fonts/Oswald-Light.woff') format('woff'),
-    url('./../fonts/Oswald-Light.ttf') format('truetype'),
-    url('./../fonts/Oswald-Light.svg#Oswald-Light') format('svg');
+  src: url('../fonts/Oswald-Light.eot');
+  src: url('../fonts/Oswald-Light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Oswald-Light.woff2') format('woff2'),
+    url('../fonts/Oswald-Light.woff') format('woff'),
+    url('../fonts/Oswald-Light.ttf') format('truetype'),
+    url('../fonts/Oswald-Light.svg#Oswald-Light') format('svg');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -52,12 +52,12 @@
 
 @font-face {
   font-family: 'Oswald-Bold';
-  src: url('./../fonts/Oswald-Bold.eot');
-  src: url('./../fonts/Oswald-Bold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Oswald-Bold.woff2') format('woff2'),
-    url('./../fonts/Oswald-Bold.woff') format('woff'),
-    url('./../fonts/Oswald-Bold.ttf') format('truetype'),
-    url('./../fonts/Oswald-Bold.svg#Oswald-Bold') format('svg');
+  src: url('../fonts/Oswald-Bold.eot');
+  src: url('../fonts/Oswald-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Oswald-Bold.woff2') format('woff2'),
+    url('../fonts/Oswald-Bold.woff') format('woff'),
+    url('../fonts/Oswald-Bold.ttf') format('truetype'),
+    url('../fonts/Oswald-Bold.svg#Oswald-Bold') format('svg');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -65,12 +65,12 @@
 
 @font-face {
   font-family: 'Oswald-Medium';
-  src: url('./../fonts/Oswald-Medium.eot');
-  src: url('./../fonts/Oswald-Medium.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Oswald-Medium.woff2') format('woff2'),
-    url('./../fonts/Oswald-Medium.woff') format('woff'),
-    url('./../fonts/Oswald-Medium.ttf') format('truetype'),
-    url('./../fonts/Oswald-Medium.svg#Oswald-Medium') format('svg');
+  src: url('../fonts/Oswald-Medium.eot');
+  src: url('../fonts/Oswald-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Oswald-Medium.woff2') format('woff2'),
+    url('../fonts/Oswald-Medium.woff') format('woff'),
+    url('../fonts/Oswald-Medium.ttf') format('truetype'),
+    url('../fonts/Oswald-Medium.svg#Oswald-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -78,12 +78,12 @@
 
 @font-face {
   font-family: 'Prompt-Black';
-  src: url('./../fonts/Prompt-Black.eot');
-  src: url('./../fonts/Prompt-Black.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-Black.woff2') format('woff2'),
-    url('./../fonts/Prompt-Black.woff') format('woff'),
-    url('./../fonts/Prompt-Black.ttf') format('truetype'),
-    url('./../fonts/Prompt-Black.svg#Prompt-Black') format('svg');
+  src: url('../fonts/Prompt-Black.eot');
+  src: url('../fonts/Prompt-Black.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-Black.woff2') format('woff2'),
+    url('../fonts/Prompt-Black.woff') format('woff'),
+    url('../fonts/Prompt-Black.ttf') format('truetype'),
+    url('../fonts/Prompt-Black.svg#Prompt-Black') format('svg');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -91,12 +91,12 @@
 
 @font-face {
   font-family: 'Prompt-Light';
-  src: url('./../fonts/Prompt-Light.eot');
-  src: url('./../fonts/Prompt-Light.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-Light.woff2') format('woff2'),
-    url('./../fonts/Prompt-Light.woff') format('woff'),
-    url('./../fonts/Prompt-Light.ttf') format('truetype'),
-    url('./../fonts/Prompt-Light.svg#Prompt-Light') format('svg');
+  src: url('../fonts/Prompt-Light.eot');
+  src: url('../fonts/Prompt-Light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-Light.woff2') format('woff2'),
+    url('../fonts/Prompt-Light.woff') format('woff'),
+    url('../fonts/Prompt-Light.ttf') format('truetype'),
+    url('../fonts/Prompt-Light.svg#Prompt-Light') format('svg');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -104,12 +104,12 @@
 
 @font-face {
   font-family: 'Prompt-Medium';
-  src: url('./../fonts/Prompt-Medium.eot');
-  src: url('./../fonts/Prompt-Medium.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-Medium.woff2') format('woff2'),
-    url('./../fonts/Prompt-Medium.woff') format('woff'),
-    url('./../fonts/Prompt-Medium.ttf') format('truetype'),
-    url('./../fonts/Prompt-Medium.svg#Prompt-Medium') format('svg');
+  src: url('../fonts/Prompt-Medium.eot');
+  src: url('../fonts/Prompt-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-Medium.woff2') format('woff2'),
+    url('../fonts/Prompt-Medium.woff') format('woff'),
+    url('../fonts/Prompt-Medium.ttf') format('truetype'),
+    url('../fonts/Prompt-Medium.svg#Prompt-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -117,12 +117,12 @@
 
 @font-face {
   font-family: 'Prompt-SemiBold';
-  src: url('./../fonts/Prompt-SemiBold.eot');
-  src: url('./../fonts/Prompt-SemiBold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-SemiBold.woff2') format('woff2'),
-    url('./../fonts/Prompt-SemiBold.woff') format('woff'),
-    url('./../fonts/Prompt-SemiBold.ttf') format('truetype'),
-    url('./../fonts/Prompt-SemiBold.svg#Prompt-SemiBold') format('svg');
+  src: url('../fonts/Prompt-SemiBold.eot');
+  src: url('../fonts/Prompt-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-SemiBold.woff2') format('woff2'),
+    url('../fonts/Prompt-SemiBold.woff') format('woff'),
+    url('../fonts/Prompt-SemiBold.ttf') format('truetype'),
+    url('../fonts/Prompt-SemiBold.svg#Prompt-SemiBold') format('svg');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -130,12 +130,12 @@
 
 @font-face {
   font-family: 'Prompt-Bold';
-  src: url('./../fonts/Prompt-Bold.eot');
-  src: url('./../fonts/Prompt-Bold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-Bold.woff2') format('woff2'),
-    url('./../fonts/Prompt-Bold.woff') format('woff'),
-    url('./../fonts/Prompt-Bold.ttf') format('truetype'),
-    url('./../fonts/Prompt-Bold.svg#Prompt-Bold') format('svg');
+  src: url('../fonts/Prompt-Bold.eot');
+  src: url('../fonts/Prompt-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-Bold.woff2') format('woff2'),
+    url('../fonts/Prompt-Bold.woff') format('woff'),
+    url('../fonts/Prompt-Bold.ttf') format('truetype'),
+    url('../fonts/Prompt-Bold.svg#Prompt-Bold') format('svg');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -143,12 +143,12 @@
 
 @font-face {
   font-family: 'Prompt-ExtraBold';
-  src: url('./../fonts/Prompt-ExtraBold.eot');
-  src: url('./../fonts/Prompt-ExtraBold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-ExtraBold.woff2') format('woff2'),
-    url('./../fonts/Prompt-ExtraBold.woff') format('woff'),
-    url('./../fonts/Prompt-ExtraBold.ttf') format('truetype'),
-    url('./../fonts/Prompt-ExtraBold.svg#Prompt-ExtraBold') format('svg');
+  src: url('../fonts/Prompt-ExtraBold.eot');
+  src: url('../fonts/Prompt-ExtraBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-ExtraBold.woff2') format('woff2'),
+    url('../fonts/Prompt-ExtraBold.woff') format('woff'),
+    url('../fonts/Prompt-ExtraBold.ttf') format('truetype'),
+    url('../fonts/Prompt-ExtraBold.svg#Prompt-ExtraBold') format('svg');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -156,12 +156,12 @@
 
 @font-face {
   font-family: 'Prompt-ExtraLight';
-  src: url('./../fonts/Prompt-ExtraLight.eot');
-  src: url('./../fonts/Prompt-ExtraLight.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-ExtraLight.woff2') format('woff2'),
-    url('./../fonts/Prompt-ExtraLight.woff') format('woff'),
-    url('./../fonts/Prompt-ExtraLight.ttf') format('truetype'),
-    url('./../fonts/Prompt-ExtraLight.svg#Prompt-ExtraLight') format('svg');
+  src: url('../fonts/Prompt-ExtraLight.eot');
+  src: url('../fonts/Prompt-ExtraLight.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-ExtraLight.woff2') format('woff2'),
+    url('../fonts/Prompt-ExtraLight.woff') format('woff'),
+    url('../fonts/Prompt-ExtraLight.ttf') format('truetype'),
+    url('../fonts/Prompt-ExtraLight.svg#Prompt-ExtraLight') format('svg');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -169,12 +169,12 @@
 
 @font-face {
   font-family: 'Prompt-Regular';
-  src: url('./../fonts/Prompt-Regular.eot');
-  src: url('./../fonts/Prompt-Regular.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-Regular.woff2') format('woff2'),
-    url('./../fonts/Prompt-Regular.woff') format('woff'),
-    url('./../fonts/Prompt-Regular.ttf') format('truetype'),
-    url('./../fonts/Prompt-Regular.svg#Prompt-Regular') format('svg');
+  src: url('../fonts/Prompt-Regular.eot');
+  src: url('../fonts/Prompt-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-Regular.woff2') format('woff2'),
+    url('../fonts/Prompt-Regular.woff') format('woff'),
+    url('../fonts/Prompt-Regular.ttf') format('truetype'),
+    url('../fonts/Prompt-Regular.svg#Prompt-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -182,12 +182,12 @@
 
 @font-face {
   font-family: 'Prompt-Thin';
-  src: url('./../fonts/Prompt-Thin.eot');
-  src: url('./../fonts/Prompt-Thin.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/Prompt-Thin.woff2') format('woff2'),
-    url('./../fonts/Prompt-Thin.woff') format('woff'),
-    url('./../fonts/Prompt-Thin.ttf') format('truetype'),
-    url('./../fonts/Prompt-Thin.svg#Prompt-Thin') format('svg');
+  src: url('../fonts/Prompt-Thin.eot');
+  src: url('../fonts/Prompt-Thin.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Prompt-Thin.woff2') format('woff2'),
+    url('../fonts/Prompt-Thin.woff') format('woff'),
+    url('../fonts/Prompt-Thin.ttf') format('truetype'),
+    url('../fonts/Prompt-Thin.svg#Prompt-Thin') format('svg');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -195,12 +195,12 @@
 
 @font-face {
   font-family: 'Open Sans-Light';
-  src: url('./../fonts/OpenSans-Light.eot');
-  src: url('./../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/OpenSans-Light.woff2') format('woff2'),
-    url('./../fonts/OpenSans-Light.woff') format('woff'),
-    url('./../fonts/OpenSans-Light.ttf') format('truetype'),
-    url('./../fonts/OpenSans-Light.svg#OpenSans-Light') format('svg');
+  src: url('../fonts/OpenSans-Light.eot');
+  src: url('../fonts/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-Light.woff2') format('woff2'),
+    url('../fonts/OpenSans-Light.woff') format('woff'),
+    url('../fonts/OpenSans-Light.ttf') format('truetype'),
+    url('../fonts/OpenSans-Light.svg#OpenSans-Light') format('svg');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -208,12 +208,12 @@
 
 @font-face {
   font-family: 'Open Sans-ExtraBold';
-  src: url('./../fonts/OpenSans-ExtraBold.eot');
-  src: url('./../fonts/OpenSans-ExtraBold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/OpenSans-ExtraBold.woff2') format('woff2'),
-    url('./../fonts/OpenSans-ExtraBold.woff') format('woff'),
-    url('./../fonts/OpenSans-ExtraBold.ttf') format('truetype'),
-    url('./../fonts/OpenSans-ExtraBold.svg#OpenSans-ExtraBold') format('svg');
+  src: url('../fonts/OpenSans-ExtraBold.eot');
+  src: url('../fonts/OpenSans-ExtraBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-ExtraBold.woff2') format('woff2'),
+    url('../fonts/OpenSans-ExtraBold.woff') format('woff'),
+    url('../fonts/OpenSans-ExtraBold.ttf') format('truetype'),
+    url('../fonts/OpenSans-ExtraBold.svg#OpenSans-ExtraBold') format('svg');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -221,12 +221,12 @@
 
 @font-face {
   font-family: 'Open Sans-Bold';
-  src: url('./../fonts/OpenSans-Bold.eot');
-  src: url('./../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/OpenSans-Bold.woff2') format('woff2'),
-    url('./../fonts/OpenSans-Bold.woff') format('woff'),
-    url('./../fonts/OpenSans-Bold.ttf') format('truetype'),
-    url('./../fonts/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
+  src: url('../fonts/OpenSans-Bold.eot');
+  src: url('../fonts/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-Bold.woff2') format('woff2'),
+    url('../fonts/OpenSans-Bold.woff') format('woff'),
+    url('../fonts/OpenSans-Bold.ttf') format('truetype'),
+    url('../fonts/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -234,12 +234,12 @@
 
 @font-face {
   font-family: 'Open Sans-Medium';
-  src: url('./../fonts/OpenSans-Medium.eot');
-  src: url('./../fonts/OpenSans-Medium.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/OpenSans-Medium.woff2') format('woff2'),
-    url('./../fonts/OpenSans-Medium.woff') format('woff'),
-    url('./../fonts/OpenSans-Medium.ttf') format('truetype'),
-    url('./../fonts/OpenSans-Medium.svg#OpenSans-Medium') format('svg');
+  src: url('../fonts/OpenSans-Medium.eot');
+  src: url('../fonts/OpenSans-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-Medium.woff2') format('woff2'),
+    url('../fonts/OpenSans-Medium.woff') format('woff'),
+    url('../fonts/OpenSans-Medium.ttf') format('truetype'),
+    url('../fonts/OpenSans-Medium.svg#OpenSans-Medium') format('svg');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -247,12 +247,12 @@
 
 @font-face {
   font-family: 'Open Sans-SemiBold';
-  src: url('./../fonts/OpenSans-SemiBold.eot');
-  src: url('./../fonts/OpenSans-SemiBold.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/OpenSans-SemiBold.woff2') format('woff2'),
-    url('./../fonts/OpenSans-SemiBold.woff') format('woff'),
-    url('./../fonts/OpenSans-SemiBold.ttf') format('truetype'),
-    url('./../fonts/OpenSans-SemiBold.svg#OpenSans-SemiBold') format('svg');
+  src: url('../fonts/OpenSans-SemiBold.eot');
+  src: url('../fonts/OpenSans-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-SemiBold.woff2') format('woff2'),
+    url('../fonts/OpenSans-SemiBold.woff') format('woff'),
+    url('../fonts/OpenSans-SemiBold.ttf') format('truetype'),
+    url('../fonts/OpenSans-SemiBold.svg#OpenSans-SemiBold') format('svg');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -260,26 +260,25 @@
 
 @font-face {
   font-family: 'Open Sans-Regular';
-  src: url('./../fonts/OpenSans-Regular.eot');
-  src: url('./../fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/OpenSans-Regular.woff2') format('woff2'),
-    url('./../fonts/OpenSans-Regular.woff') format('woff'),
-    url('./../fonts/OpenSans-Regular.ttf') format('truetype'),
-    url('./../fonts/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
+  src: url('../fonts/OpenSans-Regular.eot');
+  src: url('../fonts/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/OpenSans-Regular.woff2') format('woff2'),
+    url('../fonts/OpenSans-Regular.woff') format('woff'),
+    url('../fonts/OpenSans-Regular.ttf') format('truetype'),
+    url('../fonts/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Odibee Sans-Regular';
-  src: url('./../fonts/OdibeeSans-Regular.eot');
-  src: url('./../fonts/OdibeeSans-Regular.eot?#iefix') format('embedded-opentype'),
-    url('./../fonts/OdibeeSans-Regular.woff2') format('woff2'),
-    url('./../fonts/OdibeeSans-Regular.woff') format('woff'),
-    url('./../fonts/OdibeeSans-Regular.ttf') format('truetype'),
-    url('./../fonts/OdibeeSans-Regular.svg#OdibeeSans-Regular') format('svg');
+  font-family: 'odibee_sans-regular';
+  src: url('./../fonts/odibeesans-regular-webfont.eot');
+  src: url('./../fonts/odibeesans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('./../fonts/odibeesans-regular-webfont.woff2') format('woff2'),
+    url('./../fonts/odibeesans-regular-webfont.woff') format('woff'),
+    url('./../fonts/odibeesans-regular-webfont.ttf') format('truetype'),
+    url('./../fonts/odibeesans-regular-webfont.svg#odibee_sansregular') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
 }
