--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@ html {
   font-size: 14px;
   font-weight: 400;
   font-family: 'Open Sans-Regular';
+  background-color: $backgroundColor;
 }
 .wrapper {
   max-width: 1100px;
@@ -115,7 +116,7 @@ main {
     background-color: $backgroundColorSoft;
     padding-top: 32px;
     margin-bottom: 32px;
-    box-shadow: 0 17px 23px 0 rgba(49, 49, 49, 0.1);
+    box-shadow: 0 22px 23px 0 rgba(49, 49, 49, 0.1);
 
     .wrapper {
       @include flex_verticalAlign(center);
@@ -183,6 +184,176 @@ main {
                 position: absolute;
                 top: calc(50% - 23px / 2);
                 left: calc(50% - 23px / 2);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  section.start-find-job {
+    .wrapper {
+      .companies-logos-box {
+        margin-bottom: 66px;
+        @include flex_AlignBooth(space-between, center);
+
+        .logo {
+          &:nth-child(1) {
+            width: 57px;
+            height: 66px;
+          }
+          &:nth-child(2) {
+            width: 126px;
+            height: 106px;
+          }
+          &:nth-child(3) {
+            width: 152px;
+            height: 69px;
+          }
+          &:nth-child(4) {
+            width: 119px;
+            height: 112px;
+          }
+          &:nth-child(5) {
+            width: 110px;
+            height: 72px;
+          }
+          &:nth-child(6) {
+            width: 105px;
+            height: 104px;
+          }
+        }
+      }
+      .steps-for-job-box {
+        .mini-title {
+          font-family: 'Oswald-Regular';
+          font-size: 12px;
+          color: $orangeColor;
+          letter-spacing: 0.05em;
+          margin-bottom: 19px;
+        }
+        .flex-box {
+          display: flex;
+          gap: 40px;
+
+          .content-box {
+            .title {
+              font-family: 'Oswald-Regular';
+              font-size: 40px;
+              color: $darkTextColor;
+              line-height: 125%;
+              letter-spacing: 0.05em;
+              margin-bottom: 46px;
+            }
+            .accordion {
+              .accordion-item {
+                margin-bottom: 22px;
+                border: initial;
+
+                .accordion-header {
+                  .accordion-button {
+                    font-family: 'Open Sans-SemiBold';
+                    color: #323232;
+                    font-size: 16px;
+                    letter-spacing: 0.02em;
+                    padding: 14px;
+                    padding-bottom: 3px;
+                    gap: 15px;
+                    background-color: $backgroundColorSoft;
+                    box-shadow: initial;
+                    border-top-left-radius: 8px;
+                    border-top-right-radius: 8px;
+                    transition: 0.4s;
+
+                    &.collapsed {
+                      border-radius: 8px;
+                      padding-bottom: 14px;
+                    }
+
+                    &::before {
+                      @include flex_AlignBooth(center, center);
+                      width: 30px;
+                      height: 30px;
+                      border-radius: 6px;
+                      font-size: 16px;
+                      font-family: 'Open Sans-SemiBold';
+                    }
+                    &::after {
+                      background-image: url('./../img/icons/arrow-down.svg');
+                      background-position: center;
+                    }
+                  }
+                }
+                .accordion-collapse {
+                  .accordion-body {
+                    background-color: $backgroundColorSoft;
+                    padding: 0px 0px 21px 60px;
+                    font-family: 'Open Sans-Regular';
+                    font-size: 12px;
+                    line-height: 183%;
+                    letter-spacing: 0.02em;
+                    color: $lightGrayTextColor;
+                    border-bottom-left-radius: 8px;
+                    border-bottom-right-radius: 8px;
+                  }
+                }
+
+                &:nth-child(1) {
+                  .accordion-header {
+                    .accordion-button {
+                      &::before {
+                        content: '1';
+                        color: #9444c9;
+                        background-color: #f3e0ff;
+                      }
+                    }
+                  }
+                }
+                &:nth-child(2) {
+                  .accordion-header {
+                    .accordion-button {
+                      &::before {
+                        content: '2';
+                        color: #626fff;
+                        background-color: #e7e9fe;
+                      }
+                    }
+                  }
+                }
+                &:nth-child(3) {
+                  .accordion-header {
+                    .accordion-button {
+                      &::before {
+                        content: '3';
+                        color: $orangeColor;
+                        background-color: #ffdecc;
+                      }
+                    }
+                  }
+                }
+
+                &:last-child {
+                  margin-bottom: initial;
+                }
+              }
+            }
+          }
+          .video-box {
+            position: relative;
+            width: 635px;
+            height: 433px;
+
+            .play-btn {
+              cursor: pointer;
+              width: 77px;
+              height: 77px;
+              position: absolute;
+              top: calc(50% - 77px / 2);
+              left: calc(50% - 77px / 2);
+              transition: 0.4s;
+
+              &:hover {
+                transform: scale(120%);
               }
             }
           }
