Added 'Featured Jobs' section; Pluged slick-slider with jquery

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -1,4 +1,23 @@
-* {
+*,
+p,
+div,
+header,
+footer,
+main,
+section,
+article,
+a,
+span,
+strong,
+nav,
+ul,
+li,
+ol,
+img,
+button,
+label,
+input,
+textarea {
   padding: 0px;
   margin: 0px;
   border: none;
