--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,8 @@ $grayTextColor: #959595;
 $backgroundColorSoft: #f5f7ff;
 $backgroundColorExtraSoft: #f9faff;
 
+$button-transition: 0.6s;
+
 @mixin flex_verticalAlign($position) {
   display: flex;
   align-items: $position;
@@ -27,9 +29,56 @@ $backgroundColorExtraSoft: #f9faff;
   content: '';
   display: inline-block;
   background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
   width: $width;
   height: $height;
   @if $background-image {
     background-image: url($background-image);
   }
+}
+
+@mixin title-in-header-box {
+  font-family: 'Oswald-Regular';
+  font-size: 40px;
+  letter-spacing: 0.05em;
+  color: $darkTextColor;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+@mixin text-in-header-box {
+  color: $lightGrayTextColor;
+  line-height: 171%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  max-width: 543px;
+}
+
+@mixin card {
+  background-color: #fff;
+  border: initial;
+  border-radius: 20px;
+  box-shadow: -1px 1px 20px 0 rgba(127, 127, 127, 0.1);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+@mixin card-hover {
+  box-shadow: 0 12px 30px 0 rgba(71, 71, 71, 0.15);
+  background-color: $backgroundColorExtraSoft;
+}
+
+@mixin violet-button {
+  background-color: rgba(56, 49, 139, 0.33);
+  color: #38318b;
+  border-radius: 47px;
+  padding: 15px 34px;
+  transition: $button-transition;
+}
+
+@mixin violet-button-hover {
+  background-color: $violetButtonColor;
+  color: #fff;
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
 }
